--- a/IPSX/Flows/Login/Storyboard/Login.storyboard
+++ b/IPSX/Flows/Login/Storyboard/Login.storyboard
@@ -327,10 +327,19 @@
                                     <constraint firstAttribute="height" constant="0.5" id="par-Kw-idz"/>
                                 </constraints>
                             </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hdW-3J-azh" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
+                                <rect key="frame" x="165.5" y="321.5" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="44" id="p59-Uf-iON"/>
+                                    <constraint firstAttribute="height" constant="44" id="qHv-FU-ie9"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="ziu-Gm-gNo" firstAttribute="top" secondItem="5IV-4B-Hec" secondAttribute="bottom" id="8If-QR-3td"/>
+                            <constraint firstItem="hdW-3J-azh" firstAttribute="centerX" secondItem="deU-ul-WPh" secondAttribute="centerX" id="8em-vG-eWx"/>
                             <constraint firstItem="sVm-tX-9G9" firstAttribute="leading" secondItem="Maw-Yi-yPf" secondAttribute="leading" id="DEa-Vu-QVf"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="bottom" secondItem="rF7-LN-NfW" secondAttribute="bottom" constant="37" id="ERF-sR-gSa"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="trailing" secondItem="5IV-4B-Hec" secondAttribute="trailing" id="F2W-Nc-gXv"/>
@@ -348,6 +357,7 @@
                             <constraint firstItem="ziu-Gm-gNo" firstAttribute="trailing" secondItem="5IV-4B-Hec" secondAttribute="trailing" id="iEH-Nd-C3b"/>
                             <constraint firstItem="rF7-LN-NfW" firstAttribute="centerX" secondItem="deU-ul-WPh" secondAttribute="centerX" id="ico-ZS-mLP"/>
                             <constraint firstItem="deU-ul-WPh" firstAttribute="bottom" secondItem="YpF-L5-t2s" secondAttribute="bottom" id="inc-QS-jPD"/>
+                            <constraint firstItem="hdW-3J-azh" firstAttribute="centerY" secondItem="deU-ul-WPh" secondAttribute="centerY" id="kS1-ez-HUa"/>
                             <constraint firstItem="M5J-cg-8LK" firstAttribute="top" secondItem="Maw-Yi-yPf" secondAttribute="bottom" constant="5" id="vSV-zD-BoD"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="deU-ul-WPh"/>
@@ -358,6 +368,7 @@
                         <outlet property="bottomContinueConstraint" destination="ERF-sR-gSa" id="rxY-Kh-FDh"/>
                         <outlet property="continueButton" destination="rF7-LN-NfW" id="cA9-q3-ro1"/>
                         <outlet property="emailRichTextView" destination="nhQ-TM-OQd" id="82Z-P6-GEY"/>
+                        <outlet property="loadingView" destination="hdW-3J-azh" id="cJI-a3-Skf"/>
                         <outlet property="passRichTextField" destination="RzB-N1-Imc" id="HSH-mK-UVb"/>
                         <outlet property="separatorView" destination="ziu-Gm-gNo" id="CzS-5B-dBt"/>
                         <outlet property="topBarView" destination="5IV-4B-Hec" id="n2g-E3-r9r"/>
@@ -502,6 +513,14 @@
                                     <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 </state>
                             </button>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="BZf-gw-FXf" customClass="CustomLoadingView" customModule="IPSX" customModuleProvider="target">
+                                <rect key="frame" x="165.5" y="321.5" width="44" height="44"/>
+                                <color key="backgroundColor" red="0.81176470590000005" green="0.054901960780000002" blue="0.054901960780000002" alpha="1" colorSpace="calibratedRGB"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="44" id="OTx-PG-vuJ"/>
+                                    <constraint firstAttribute="width" constant="44" id="uq9-AG-cZd"/>
+                                </constraints>
+                            </view>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
@@ -510,6 +529,7 @@
                             <constraint firstItem="4Ac-vC-zkK" firstAttribute="top" relation="greaterThanOrEqual" secondItem="BpD-ts-qWc" secondAttribute="bottom" constant="40" id="Jg6-6o-NqJ"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="top" secondItem="QOC-Kv-ctQ" secondAttribute="top" constant="20" id="Plo-o1-Mwq"/>
                             <constraint firstItem="ij5-YA-s4T" firstAttribute="top" secondItem="A3O-NY-cF5" secondAttribute="bottom" priority="750" constant="24" id="Qcu-4k-Ny3"/>
+                            <constraint firstItem="BZf-gw-FXf" firstAttribute="centerX" secondItem="nCy-GT-MJK" secondAttribute="centerX" id="SZe-LV-RLE"/>
                             <constraint firstItem="BpD-ts-qWc" firstAttribute="top" secondItem="ij5-YA-s4T" secondAttribute="bottom" constant="38" id="WQo-Rn-aNF"/>
                             <constraint firstItem="4Ac-vC-zkK" firstAttribute="centerX" secondItem="nCy-GT-MJK" secondAttribute="centerX" id="csu-sA-Fda"/>
                             <constraint firstItem="BpD-ts-qWc" firstAttribute="centerX" secondItem="nCy-GT-MJK" secondAttribute="centerX" id="dV3-2d-GcP"/>
@@ -517,6 +537,7 @@
                             <constraint firstItem="GjQ-VO-LVy" firstAttribute="top" secondItem="BpD-ts-qWc" secondAttribute="bottom" constant="5" id="hTm-HA-BGm"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="bottom" secondItem="4Ac-vC-zkK" secondAttribute="bottom" constant="37" id="iZC-ZE-KZx"/>
                             <constraint firstItem="GjQ-VO-LVy" firstAttribute="trailing" secondItem="BpD-ts-qWc" secondAttribute="trailing" id="koX-JT-KEJ"/>
+                            <constraint firstItem="BZf-gw-FXf" firstAttribute="centerY" secondItem="nCy-GT-MJK" secondAttribute="centerY" id="lDF-FR-wKS"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="trailing" secondItem="A3O-NY-cF5" secondAttribute="trailing" id="lkc-sG-gFR"/>
                             <constraint firstItem="nCy-GT-MJK" firstAttribute="top" secondItem="A3O-NY-cF5" secondAttribute="top" constant="50" id="nbX-uY-0wj"/>
                             <constraint firstItem="A3O-NY-cF5" firstAttribute="leading" secondItem="nCy-GT-MJK" secondAttribute="leading" id="vCF-AN-9em"/>
@@ -529,6 +550,7 @@
                         <outlet property="bottomContinueConstraint" destination="iZC-ZE-KZx" id="Ek8-mB-I3i"/>
                         <outlet property="continueButton" destination="4Ac-vC-zkK" id="np9-RD-6G9"/>
                         <outlet property="emailRichTextView" destination="a1n-CG-s9R" id="Lfe-uO-s7b"/>
+                        <outlet property="loadingView" destination="BZf-gw-FXf" id="CLj-in-F7v"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="sRN-0L-50g" userLabel="First Responder" sceneMemberID="firstResponder"/>
