--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -205,7 +205,15 @@
                 <viewControllerPlaceholder storyboardName="TokenRequest" id="ZZ3-69-9NQ" sceneMemberID="viewController"/>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="goG-Au-rdK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-1547" y="1237"/>
+            <point key="canvasLocation" x="-1734" y="1274"/>
+        </scene>
+        <!--ProxyDetailsControllerID-->
+        <scene sceneID="DLv-lT-FbC">
+            <objects>
+                <viewControllerPlaceholder storyboardName="NewProxy" referencedIdentifier="ProxyDetailsControllerID" id="qSC-O9-erJ" sceneMemberID="viewController"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="mf9-hA-eQf" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-1306" y="1274"/>
         </scene>
         <!--Dashboard-->
         <scene sceneID="hoR-RX-E2W">
@@ -490,6 +498,7 @@
                         <outlet property="tokensAmountLabel" destination="e3Q-X6-BW7" id="F2D-Zh-jBX"/>
                         <outlet property="topBarView" destination="qfQ-5h-drj" id="47w-QE-xym"/>
                         <outlet property="topConstraintOutlet" destination="fvB-8y-qu2" id="mr9-zb-tBg"/>
+                        <segue destination="qSC-O9-erJ" kind="show" identifier="ProxyDetailsSegueiID" id="vlC-TX-1jM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sqh-Z5-fpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
