Fix slow loading on dashboard

--- a/IPSX/Storyboard/Main.storyboard
+++ b/IPSX/Storyboard/Main.storyboard
@@ -504,7 +504,7 @@
                         <outlet property="tokensAmountLabel" destination="e3Q-X6-BW7" id="F2D-Zh-jBX"/>
                         <outlet property="topBarView" destination="qfQ-5h-drj" id="47w-QE-xym"/>
                         <outlet property="topConstraintOutlet" destination="fvB-8y-qu2" id="mr9-zb-tBg"/>
-                        <segue destination="qSC-O9-erJ" kind="show" identifier="ProxyDetailsSegueiID" id="vlC-TX-1jM"/>
+                        <segue destination="qSC-O9-erJ" kind="presentation" identifier="ProxyDetailsSegueiID" id="vlC-TX-1jM"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="Sqh-Z5-fpU" userLabel="First Responder" sceneMemberID="firstResponder"/>
