Add logic to show the actual token request list

--- a/IPSX/Flows/Dashboard/Storyboard/TokenRequest.storyboard
+++ b/IPSX/Flows/Dashboard/Storyboard/TokenRequest.storyboard
@@ -162,6 +162,13 @@
                                                 <constraint firstItem="zCx-Jz-UgC" firstAttribute="leading" secondItem="Eex-nH-m5D" secondAttribute="leading" id="yEF-9J-q0v"/>
                                             </constraints>
                                         </tableViewCellContentView>
+                                        <connections>
+                                            <outlet property="aliasLabel" destination="ZLo-2v-P8T" id="jet-ra-OhT"/>
+                                            <outlet property="completedView" destination="eYD-wI-ri8" id="5Lp-OU-EU8"/>
+                                            <outlet property="dateLabel" destination="rOV-Bg-xi1" id="a3f-3d-AmB"/>
+                                            <outlet property="pendingView" destination="MxC-U5-3W6" id="L7I-fb-D4N"/>
+                                            <outlet property="quantityLabel" destination="dQz-dM-dfb" id="HCm-ay-2Y4"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
